Update photo proposal
